# Water-Data-Explorer-WHOS

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  install.yml  install_dependencies.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test-docker-wde.yml
docker_files/: Dockerfile  custom_middleware.py  nginx
docker_files/helpful_files/: tethys_mockup.env  two_container_env.txt
docker_files/salt/: tethys_app.sls
docs/: Makefile  WDE.rst  WDE_admin_func.rst  WDE_user_func.rst  index.rst
tethysapp/water_data_explorer/: app.py  endpoints.py  groups.py  startAll.py
tethysapp/water_data_explorer/templates/water_data_explorer/: base.html  home.html
tethysapp/water_data_explorer/templates/water_data_explorer/modals/: addGroupHydroserver.html  groupSearch.html  showVariables2.html
tethysapp/water_data_explorer_whos/: app.py  endpoints.py  groups.py  init_stores.py  model.py  startAll.py
tethysapp/water_data_explorer_whos/public/css/: main.css
tethysapp/water_data_explorer_whos/public/js/: endpoints.js  groups.js  initAll.js  partners.js  sites.js  utilities.js  utilitiesGraphs.js  variables.js
tethysapp/water_data_explorer_whos/templates/water_data_explorer_whos/: base.html  his.html  home.html  sideContent.html
tethysapp/water_data_explorer_whos/templates/water_data_explorer_whos/modals/: DeleteHydroWarning.html  DeleteTableGroup.html  addGroupHydroserver.html  addHydroserver.html  addWmsLayersToHydroserver.html  delCentral.html  delServer.html  (+9 more)
tethysapp/water_data_explorer_whos/tests/: tests.py
